% -*- coding: utf-8 -*-
\name{NEWS}
\title{ RadOnc News }
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.1.5}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item [currently in development] Adds a modified Earth-Mover's Distance to \code{compareStructures()}
    }
  }

  \subsection{OTHER UPDATES}{
    \itemize{
      \item Updated \code{RadOnc-package.Rd} file to conform with latest CRAN requirements
    }
   }

  \subsection{ACKNOWLEDGEMENTS}{
    \itemize{
      \item Credit to Abhinav Nellore and Zachary Fried for their work on \code{compareStructures()}.
   }
  }
 }
 
\section{CHANGES IN VERSION 1.1.4}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item Added support for plan sum import from Aria 13 using \code{read.DVH(..., type="aria13")}
    }
  }

  \subsection{ACKNOWLEDGEMENTS}{
    \itemize{
      \item Thanks to Maura Kirk for her assistance with Aria 13 plan sum import.
   }
  }

 }

\section{CHANGES IN VERSION 1.1.3}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item Added a new function, \code{get.HU()}, which is able to extract corresponding Hounsfield Unit (HU) values from \code{RTdata} for one or more structures.
    }
  }

  \subsection{ACKNOWLEDGEMENTS}{
    \itemize{
      \item Thanks to Hans-Erik Kallman for his suggestion to include the capability to extract Hounsfield Unit (HU) details for a structure3D object (\code{get.HU()} function).
   }
  }

 }

\section{CHANGES IN VERSION 1.1.2}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item Added new plotting method, \code{plot(..., plot.type="correlation")}, to enable numerical correlation of dose from a collection of DVHs with an independent variable (for instance toxicity or other clinical outcome).
    }
  }

  \subsection{OTHER UPDATES}{
    \itemize{
      \item Extended \code{read.DICOM.RT()} function to import MRI data (previous code was unable to import MR data)
    }
   }

  \subsection{ACKNOWLEDGEMENTS}{
    \itemize{