@@ -119,7 +119,7 @@ DVHs
 \newpage
 \subsection{DVH calculation from dose grid}
 \label{DVH.calculate}
-Alternatively, \Rfunction{read.DVH(..., method="dicom")} can be employed to extract DVH data from a DICOM-RT dataset including a dose grid (calculated from the treatment planning system) and one or more structure set(s). The DVH import implicitly calls the \Rfunction{calculate.DVH()} function without the user having to manually specify dose calculation, however the \Rfunction{calculate.DVH()} function can also be called explicitly to calculate or recalculate DVHs using specific input parameters (generally the user will not need to call this function explicitly). In any of the above cases, DVH calculation from dose grid data utilizes the method previously described by Straube et al. with trilinear interpolation of dosimetric information \citep{straube}. Please note that this is a computationally intensive process and has not yet been optimized in the current release (future releases will include speed-ups of this dose calculation).
+Alternatively, \Rfunction{read.DVH(..., type="dicom")} can be employed to extract DVH data from a DICOM-RT dataset including a dose grid (calculated from the treatment planning system) and one or more structure set(s). The DVH import implicitly calls the \Rfunction{calculate.DVH()} function without the user having to manually specify dose calculation, however the \Rfunction{calculate.DVH()} function can also be called explicitly to calculate or recalculate DVHs using specific input parameters (generally the user will not need to call this function explicitly). In any of the above cases, DVH calculation from dose grid data utilizes the method previously described by Straube et al. with trilinear interpolation of dosimetric information \citep{straube}. Please note that this is a computationally intensive process and has not yet been optimized in the current release (future releases will include speed-ups of this dose calculation).
 
 \begin{figure}[H]
 \begin{center}
